<resources>
    <string name="app_name">DeveloperKit</string>
    <string name="login_welcome">Welcome \nHelloSud</string>
    <string name="login_your_name">Your nickname</string>
    <string name="title_hellosud">HelloSud</string>
    <string name="login_edit_name">Enter your nickname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="play_now">Try Now</string>
    <string name="search_hint">Join With Room Number</string>
    <string name="tabs_index">Home</string>
    <string name="tabs_room">Room</string>
    <string name="tabs_set">Settings</string>
    <string name="useragreement_title">Welcome to HelloSud</string>
    <string name="useragreement_content_part1">We take the protection of your personal information very seriously. For more information about the collection and use of personal information, tap the</string>
    <string name="useragreement_content_part2">User Agreement</string>
    <string name="useragreement_content_part3">and</string>
    <string name="useragreement_content_part4">Privacy Policy</string>
    <string name="useragreement_content_part5">Read carefully. Tap Agree to indicate you\'ve read and agreed to all of the above agreements</string>
    <string name="useragreement_reject">Don\'t agree</string>
    <string name="useragreement_agree">Agree</string>
    <string name="user_secondary_title">Tip</string>
    <string name="user_secondary_content">HelloSud will only use your information for providing services and improving the experience. We will do our best to protect your information security, agree to continue
\n If you don\'t agree to the Privacy Policy, unfortunatelly we can not provide you with the complete products and services</string>
    <string name="user_secondary_reject">Close App</string>
    <string name="user_secondary_agree">Agree and continue to use</string>
    <string name="setting_sdk_version">SDK Version</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_useragreement">User Agreement</string>
    <string name="setting_privacy">Privacy Policy</string>
    <string name="setting_contact">Contact Us</string>
    <string name="setting_userid">User ID %1$s</string>
    <string name="setting_userid1">User ID: %1$s</string>
    <string name="coming_soon">Stay tuned</string>
    <string name="room_list_enter">Enter</string>
    <string name="room_list_roomid">room ID: %1$s</string>
    <string name="room_list_online">%1$s users</string>
    <string name="setting_contact1_content">For more information or feedback,contact us via email: help@sud.tech</string>
    <string name="setting_contact1_but">OK</string>
    <string-array name="names_list">
        <item>哈利</item>
        <item>祺祥</item>
        <item>沐辰</item>
        <item>阿米莉亚</item>
        <item>齐默尔曼</item>
        <item>陌北</item>
        <item>旺仔</item>
        <item>半夏</item>
        <item>朝雨</item>
        <item>卫斯理</item>
        <item>阿道夫</item>
        <item>长青</item>
        <item>安小六</item>
        <item>小凡</item>
        <item>炎月</item>
        <item>醉风</item>
        <item>斯科特</item>
        <item>布卢默</item>
        <item>宛岩</item>
        <item>平萱</item>
        <item>凝雁</item>
        <item>怀亚特</item>
        <item>格伦巴特</item>
        <item>尔白</item>
        <item>南露</item>
        <item>爱丽丝</item>
        <item>埃尔维斯</item>
        <item>奥利维亚</item>
        <item>妙竹</item>
        <item>雲思衣</item>
        <item>少女大佬</item>
        <item>兔兔别跑</item>
        <item>夏纱</item>
        <item>嘉慕</item>
        <item>阿拉贝拉</item>
        <item>星剑</item>
        <item>罗德斯</item>
        <item>渡满归</item>
        <item>星浅</item>
        <item>问水</item>
        <item>星奕晨</item>
        <item>丹尼尔</item>
        <item>白止扇</item>
        <item>暖暖</item>
        <item>埃迪</item>
        <item>杰里米</item>
        <item>玛德琳</item>
        <item>波佩</item>
        <item>卡诺</item>
        <item>泡芙</item>
        <item>帕特里克</item>
        <item>梅雷迪斯</item>
        <item>公孙昕</item>
        <item>青弘</item>
        <item>潘豆豆</item>
        <item>小番秀二</item>
        <item>大一宇</item>
        <item>米奇</item>
        <item>戴夫</item>
        <item>伯特</item>
        <item>米洛布雷</item>
        <item>阿德莱德</item>
        <item>吉宝</item>
        <item>伊娃</item>
        <item>路易斯</item>
        <item>希拉姆</item>
        <item>杰西</item>
        <item>贝特西</item>
        <item>利奥波德</item>
        <item>丽塔</item>
        <item>拉姆斯登</item>
        <item>伯纳德</item>
        <item>理查德</item>
        <item>奥尔德里奇</item>
        <item>劳里</item>
        <item>奥兰多</item>
        <item>埃尔罗伊</item>
        <item>栗和顺</item>
        <item>朱雀佳行</item>
        <item>理德拉</item>
        <item>凡勃伦</item>
        <item>科波菲尔</item>
        <item>玉谷大三</item>
        <item>大木元司</item>
        <item>钮阳冰</item>
        <item>盖勤</item>
        <item>紫心</item>
        <item>弘慕慕</item>
        <item>怀星驰</item>
        <item>泉宏胜</item>
        <item>闻人星海</item>
        <item>Watt</item>
        <item>Kevin</item>
        <item>Toby</item>
        <item>瓦利斯</item>
        <item>苏珊娜</item>
        <item>罗密欧</item>
        <item>福克纳</item>
        <item>多萝西</item>
        <item>贝尔</item>
        <item>卡门</item>
        <item>安德烈</item>
        <item>朱丽叶</item>
        <item>吉姆</item>
    </string-array>
    <string-array name="language_list">
        <item>Follow the system</item>
        <item>简体中文</item>
        <item>繁體中文</item>
        <item>English</item>
        <item>لغة عربية</item>
        <item>Bahasa Indonesia</item>
        <item>Bahasa Melayu</item>
        <item>ภาษาไทย</item>
        <item>Tiếng Việt</item>
        <item>한국어</item>
        <item>Español</item>
        <item>日本語</item>
    </string-array>
    <string name="search_room_error">Enter the correct room number</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="user_privacy_title">Privacy Policy</string>
    <string name="roomlist_empty">No live streams right now \n
Go to homepage to create one~</string>
    <string name="search_enter">Enter</string>
    <string name="select_game">Select game</string>
    <string name="audio_click_got_mic">Click to turn mike on</string>
    <string name="audio_has_ready">Ready</string>
    <string name="audio_not_ready">Not ready</string>
    <string name="audio_got_mic">Mike on</string>
    <string name="audio_chat_hint">Let\'s chat~</string>
    <string name="audio_dialog_gift_present">Gift</string>
    <string name="audio_dialog_present">Give</string>
    <string name="audio_cancle">Cancel</string>
    <string name="audio_all">all</string>
    <string name="audio_mic_index">%1$d mic</string>
    <string name="audio_room_admin">Host</string>
    <string name="audio_send">Send</string>
    <string name="audio_send_msg_hint">Send a message…</string>
    <string name="audio_send_gift_user_empty">Select recipient</string>
    <string name="audio_send_gift_empty">Select present</string>
    <string name="audio_recreation_chat">General Chat</string>
    <string name="audio_chat_room">Chat Room</string>
    <string name="audio_gameing">In Game</string>
    <string name="audio_room_number">room ID</string>
    <string name="audio_close_room_title">Are you sure you want to leave the room?</string>
    <string name="audio_enter_the_room">Entered the room</string>
    <string name="audio_down_mic">Mike off</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_">Confirm to leave</string>
    <string name="common_go_setting">Settings</string>
    <string name="common_camera">Camera</string>
    <string name="common_storage">Storage</string>
    <string name="common_correlation">Related</string>
    <string name="common_record_audio">Recording</string>
    <string name="common_phone">Phone</string>
    <string name="common_setting_permission_info">Enable the %1$s permission in settings to use the %2$s APP function normally</string>
    <string name="close_game">Close Game</string>
    <string name="finish_game">End Game</string>
    <string name="index_creat_room">Create Room</string>
    <string name="index_game_join">Join </string>
    <string name="occupy_size">Occupied size</string>
    <string name="version_info">Version Info</string>
    <string name="change_rtc_service">Switch RTC service provider</string>
    <string name="change_language">Switch language</string>
    <string name="github">GitHub</string>
    <string name="open_source_licenses">Open source protocol</string>
    <string name="change_rtc_confirm">Are you sure you wan\'t to switch the RTC service provider to [%1$s]?</string>
    <string name="be_making">In production, stay tuned!</string>
    <string name="total_value">Total %1$s</string>
    <string name="finish_game_confirm">Are you sure you want to end the game?</string>
    <string name="playing_down_mic">The game has already started, are you sure you wan\'t to leave?</string>
    <string name="game_number">Number of players</string>
    <string name="rtc_name_zego">Zego</string>
    <string name="rtc_name_agora">Agora</string>
    <string name="rtc_name_rong_cloud">RongCloud</string>
    <string name="rtc_name_comms_ease">CommsEase</string>
    <string name="rtc_name_volc_engine">VoiceEngine</string>
    <string name="rtc_name_alibaba_cloud">Alibaba Cloud</string>
    <string name="rtc_name_tencent_cloud">Tencent Cloud</string>
    <string name="asr_guide">Our game supports speech recognition, turn your mic on and show your charming side~</string>
    <string name="asr_guide_number_boom">You can turn on the mic to count off. Bonus for slackers!</string>
    <string name="primary_field">Beginner Stage</string>
    <string name="middle_field">Intermediate Stage</string>
    <string name="high_field">Advanced Stage</string>
    <string name="win_multiple_award">Win %1$dx reward</string>
    <string name="count_people_play">%1$s players online</string>
    <string name="now_participation">Join now</string>
    <string name="join_game_confirm">Participating consumes %1$d gold, do you want to continue?</string>
    <string name="no_longer_remind">Don\'t show again</string>
    <string name="confirm_join">Confirm to join</string>
    <string name="asr_guide_draw">Using the mike is faster than typing!</string>
    <string name="app_version_low">This version of the app is low, please update to the latest version</string>
    <string name="app_version_update_tip">There is a new version available, update now?</string>
    <string name="app_version_update_btn1">Later</string>
    <string name="app_version_update_btn2">Update now</string>
    <string name="ticket_level_notice">Congrats to %1$s for winning %2$s gold in the Intermediate Stage!</string>
    <string name="unable_to_speak">You can\'t speak now</string>
    <string name="no_empty_seat">No empty seats</string>
    <string name="more_settings">More settings</string>
    <string name="create_ticket_room_title">Select the created ticket session level</string>
    <string name="take_first_place">You got first place</string>
    <string name="high_gold_coin_award">Up to %1$d gold coin reward</string>
    <string name="transfer_captain">Transfer leadership</string>
    <string name="kick_game">Kicked out</string>
    <string name="net_error_hint">Network error, please check your network connection</string>
    <string name="switched_language">Language switched</string>
    <string name="order_dialog_title">Select speaking users</string>
    <string name="guess_i_win">Vote yourself</string>
    <string name="guess_i_win_hint">Be the winner and get 5 times reward</string>
    <string name="guess_i_win_auto">Do you want to turn on the auto-guess to vote yourself for each round?</string>
    <string name="cancel_start">Not now</string>
    <string name="start_now">Turn on</string>
</resources>