<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_guess_dialog_bg"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/guess_i_win"
        android:gravity="center"
        android:textStyle="bold"
        android:shadowRadius="3"
        android:shadowColor="#ffde00"
        android:shadowDx="1"
        android:shadowDy="2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/guess_i_win_hint"
        android:textStyle="bold"
        android:gravity="center"
        android:shadowRadius="3"
        android:shadowColor="#ffde00"
        android:shadowDx="1"
        android:shadowDy="2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_hint_auto_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/guess_i_win_auto"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hint" />

    <TextView
        android:id="@+id/tv_hint_auto_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hint_auto_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hint_auto_hint">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/cancel_start"
            android:layout_marginStart="16dp"
            android:textColor="@color/selector_guess_btn_color"
            android:background="@drawable/shape_guess_btn_white" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/start_now"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/selector_guess_btn_color"
            android:background="@drawable/shape_guess_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>